# semantic_segmentation

./: .gitignore  DataModules.ipynb  Patches.ipynb  Postdam.ipynb  Potsdam.ipynb  README.md  Vaihingen.ipynb  datamodule_gid15.py  datamodule_potsdam.py  datamodule_vaihingen.py  potsdam_splitter.py  pyproject.toml  split_utils.py  unet_model.ipynb  utils.py  vaihingen_splitter.py
data_module/: __init__.py  basers.py  basevision.py  gid15.py  grid_data_module.py  gridloader.py  gridpatch.py  potsdamvaihingen.py
legacy/: vaihingen_splitter.py
notebooks/: DataModules.ipynb  Patches.ipynb  SeasonNET.ipynb  Splitter.ipynb  Tensorboard_Exploration.ipynb  utils.py
splitters/: deadtrees_splitter.py  potsdam_splitter.py
src/: RegularTrainer.py  config_regular_unet.yaml  deadtrees_check.ipynb  training_check.ipynb
src/config/: regular_unet.yaml  regular_unet_v1.yaml  regular_unet_v2.yaml
src/datamodules/: datamodule_deadtrees.py  datamodule_gid15.py  datamodule_potsdam.py  datamodule_vaihingen.py
src/datamodules/data_classes/: __init__.py  basers.py  basevision.py  deadtrees.py  geonrw.py  grid_data_module.py  gridloader.py  loveda.py  regular_data_module.py
src/segmentators/: __init__.py  regular_segmentator.py
