[project]
name = "deadtrees"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel<7.0.0",
    "ipywidgets>=8.1.8",
    "kornia>=0.8.2",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "segmentation-models-pytorch>=0.5.0",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchgeo>=0.9.0",
    "torchinfo>=1.8.0",
    "torchio>=1.0.2",
    "torchmetrics>=1.9.0",
]
